Fixed additional issues in HtmlParser